# gitcash

./: .gitignore  Cargo.toml  README.md  config.toml.example
.github/workflows/: ci.yml
docs/: spec.md
gitcash/: Cargo.toml
gitcash/src/: config.rs  main.rs  validators.rs
libgitcash/: Cargo.toml
libgitcash/examples/: cli.rs  show_stats.rs
libgitcash/src/: config.rs  error.rs  lib.rs  transaction.rs
