[package]
name = "gitcash"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.6.2"
libgitcash = { path = "../libgitcash/" }
tracing = "0.1"
tracing-subscriber = "0.3"
