[package]
name = "libgitcash"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.17.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.7"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"